--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.23.3",
     "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "^5.2.0",
     "@radix-ui/react-accordion": "^1.1.2",
